Missions use planet fleet and resources, some refactoring
